tests/compilation/no_variable.stderr
error: There is no variable, you can add the attribute #[variable] to a field to create one
 --> tests/compilation/no_variable.rs:9:14
  |
9 |     #[derive(Equation)]
  |              ^^^^^^^^
  |
  = note: this error originates in the derive macro `Equation` (in Nightly builds, run with -Z macro-backtrace for more info)
